- [DS-758] Mirage theme - lists of unifished submission/workflow task wrong link in collection column

(Janne Pietarila)
- [DS-761] MetadataSchema: cache out of sync after calling delete()

(Ben Bosman)
- [DS-808] jqueryUI javascript gets imported without corresponding CSS
- [DS-809] Support for empty dc.abstract dim field in Internet Explorer
- [DS-823] DatabaseManager Oracle compliance

(Stuart Lewis, Kim Shepherd)
- [DS-806] Item.match() incorrect logic for schema testing

(Robin Taylor)
- [DS-215] Single-argument Item.getMetadata does not work with mixed-case metadata terms


1.7.0
=====
(Oleksandr Sytnyk)
- [DS-561] On login screen, keyboard input focus should be set to the first field (E-mail Address) so you don't have to use the mouse (JSPUI)

(Yin Yin Latt)
- [DS-588] Patch for SFX (OpenURL resolver)

(Michael B. Klein)
- [DS-699] ChoiceAuthority plugin for old-style controlled vocabularies

(Andrea Bollini)
- [DS-585] The Content Disposition configuration is ignored by unpublished items
- [DS-704] Update pdfbox library to improve performance and out-of-box support for pdf extraction
- [DS-562] Community admin or user with WRITE, ADD and ADMIN policy on collection cannot delete that collection due to bug in AuthorizeUtil.authorizeManageTemplateItem(context,collection)

(Reinhard Engels)
- [DS-637] Browse index bug/fix ONLY for authority index: first "too low" confidence value stop current item metadata to be indexed in the autority index

(Hardy Pottinger)
- [DS-691] File size math in the mets:file template in General-Hander.xsl (XMLUI) is incorrect

(Kim Shepherd)
- [DS-688] AuthorizeManager.isAdmin(Context, DSpaceObject) throws exception when EPerson is null
- [DS-689] DisplayStatisticsServlet throws NPE if requested handle is null, should throw 404
- [DS-718] JSPUI redirect users to requested page after authentication
- [DS-719] solr.statistics.logBots isn't documented in dspace.cfg

(Flavio Botelho)