@@ -240,6 +240,30 @@
                                      else
                                           return true;
                                 }
+
+                                function FnArray()
+                                {
+                                    this.funcs = new Array;
+                                }
+
+                                FnArray.prototype.add = function(f)
+                                {
+                                    if( typeof f!= "function" )
+                                    {
+                                        f = new Function(f);
+                                    }
+                                    this.funcs[this.funcs.length] = f;
+                                };
+
+                                FnArray.prototype.execute = function()
+                                {
+                                    for( var i=0; i <xsl:text disable-output-escaping="yes">&lt;</xsl:text> this.funcs.length; i++ )
+                                    {
+                                        this.funcs[i]();
+                                    }
+                                };
+
+                                var runAfterJSImports = new FnArray();
             </script>
 
             <!-- Modernizr enables HTML5 elements & feature detects -->
@@ -572,6 +596,10 @@
         </script>
         <xsl:text disable-output-escaping="yes" >&lt;![endif]--&gt;</xsl:text>
 
+
+        <script type="text/javascript">
+            runAfterJSImports.execute();
+        </script>
 
         <!-- Add a google analytics script if the key is present -->
         <xsl:if test="/dri:document/dri:meta/dri:pageMeta/dri:metadata[@element='google'][@qualifier='analytics']">
